# FASTAlgorithm

./: CMakeLists.txt  README.md  TestTask.cpp
